envoy-proxy/_envoy_.yaml
# apiVersion: v1
# kind: ConfigMap
# # metadata:
# #   name: envoy-configmap
# data:
#   envoy.yaml: |
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: envoy
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: brabo-web
              cors:
                allow_origin_string_match:
                  - prefix: "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,
                max_age: "1728000"
          http_filters:
          - name: envoy.filters.http.cors
          - name: envoy.router

  - name: amp-io
    address:
      socket_address: { address: 0.0.0.0, port_value: 8000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: [ "*" ]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: amp-io
                  timeout: 
                    seconds: 0
              cors:
                allow_origin_string_match:
                  - prefix: "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
          http_filters:
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.router

  clusters:
  - name: brabo-web
    connect_timeout: 15.0s
    type: logical_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: brabo-web
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: brabo-web
                port_value: 5000

  - name: amp-io
    connect_timeout: 30s
    type: logical_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts: [{ socket_address: { address: amp-io, port_value: 8000 }}]
